--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCR_MaxPain_high OI_change_in_OI_nifty.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNRe+XlsMILhUMRz9FlJjf2",
+      "authorship_tag": "ABX9TyM13TdhjqxxIetJTaEiJ/i9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,26 +267,111 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 206
         },
-        "outputId": "cc981cb8-0faa-46d7-9262-b2f04bf05911"
+        "outputId": "276b63ec-0ae5-40c0-b459-697d73dcdf7c"
       },
       "source": [
-        ""
+        "strike=[7000,7100,7200,7300,7400,7500,7600,7700,7800,7900,8000,8100,8200,8300,8400,8500,8600]\n",
+        "calloi=[1404300,335700,482100,422475,963900,999975,785550,1823400,3448575,5367450,6510975,5900325,5113350,3844500,2135625,2252250,1083750]\n",
+        "putoi=[4087050,1029150,2977875,1975650,2336700,4548450,3690900,5783025,4864125,2559375,1447125,310500,248775,355725,255525,488475,58500]\n",
+        "frame={'strike':strike,'calloi':calloi,'putoi':putoi}\n",
+        "dft=pd.DataFrame(frame)\n",
+        "\n",
+        "dft['helpcall'] = dft['strike'] - dft.loc[0,'strike']\n",
+        "dft['helpput'] = dft['strike'].iloc[-1] - dft['strike']\n",
+        "\n",
+        "dft.head()"
       ],
-      "execution_count": 17,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>strike</th>\n",
+              "      <th>calloi</th>\n",
+              "      <th>putoi</th>\n",
+              "      <th>helpcall</th>\n",
+              "      <th>helpput</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>7000</td>\n",
+              "      <td>1404300</td>\n",
+              "      <td>4087050</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>7100</td>\n",
+              "      <td>335700</td>\n",
+              "      <td>1029150</td>\n",
+              "      <td>100</td>\n",
+              "      <td>1500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>7200</td>\n",
+              "      <td>482100</td>\n",
+              "      <td>2977875</td>\n",
+              "      <td>200</td>\n",
+              "      <td>1400</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>7300</td>\n",
+              "      <td>422475</td>\n",
+              "      <td>1975650</td>\n",
+              "      <td>300</td>\n",
+              "      <td>1300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>7400</td>\n",
+              "      <td>963900</td>\n",
+              "      <td>2336700</td>\n",
+              "      <td>400</td>\n",
+              "      <td>1200</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "14700"
+              "   strike   calloi    putoi  helpcall  helpput\n",
+              "0    7000  1404300  4087050         0     1600\n",
+              "1    7100   335700  1029150       100     1500\n",
+              "2    7200   482100  2977875       200     1400\n",
+              "3    7300   422475  1975650       300     1300\n",
+              "4    7400   963900  2336700       400     1200"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 26
         }
       ]
     },
