--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -264,10 +264,10 @@
       "metadata": {
         "id": "hCe-dPbQCXAz",
         "colab_type": "code",
-        "outputId": "276b63ec-0ae5-40c0-b459-697d73dcdf7c",
+        "outputId": "16e7af36-6acc-4ee7-8a8d-a45fcd6b33c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 1000
         }
       },
       "source": [
@@ -280,97 +280,122 @@
         "dft['helpcall'] = dft['strike'] - dft.loc[0,'strike']\n",
         "dft['helpput'] = dft['strike'].iloc[-1] - dft['strike']\n",
         "\n",
-        "dft.head()"
+        "j = 0\n",
+        "a = 0\n",
+        "for i in range(0,len(dft)):\n",
+        "  for j in range(0,i-j):\n",
+        "    #print(dft['calloi'].iloc[j],dft['helpcall'].iloc[i-j])\n",
+        "    #a = a + dft['calloi'].iloc[j] * dft['helpcall'].iloc[i-j]\n",
+        "    #print(j)\n",
+        "\n",
+        "  print('######')\n",
+        "  #print(a)\n",
+        "#dft.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>strike</th>\n",
-              "      <th>calloi</th>\n",
-              "      <th>putoi</th>\n",
-              "      <th>helpcall</th>\n",
-              "      <th>helpput</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>7000</td>\n",
-              "      <td>1404300</td>\n",
-              "      <td>4087050</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>7100</td>\n",
-              "      <td>335700</td>\n",
-              "      <td>1029150</td>\n",
-              "      <td>100</td>\n",
-              "      <td>1500</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>7200</td>\n",
-              "      <td>482100</td>\n",
-              "      <td>2977875</td>\n",
-              "      <td>200</td>\n",
-              "      <td>1400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>7300</td>\n",
-              "      <td>422475</td>\n",
-              "      <td>1975650</td>\n",
-              "      <td>300</td>\n",
-              "      <td>1300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>7400</td>\n",
-              "      <td>963900</td>\n",
-              "      <td>2336700</td>\n",
-              "      <td>400</td>\n",
-              "      <td>1200</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   strike   calloi    putoi  helpcall  helpput\n",
-              "0    7000  1404300  4087050         0     1600\n",
-              "1    7100   335700  1029150       100     1500\n",
-              "2    7200   482100  2977875       200     1400\n",
-              "3    7300   422475  1975650       300     1300\n",
-              "4    7400   963900  2336700       400     1200"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 26
+          "output_type": "stream",
+          "text": [
+            "######\n",
+            "1404300 100\n",
+            "######\n",
+            "1404300 200\n",
+            "335700 100\n",
+            "######\n",
+            "1404300 300\n",
+            "335700 200\n",
+            "######\n",
+            "1404300 400\n",
+            "335700 300\n",
+            "482100 200\n",
+            "######\n",
+            "1404300 500\n",
+            "335700 400\n",
+            "482100 300\n",
+            "######\n",
+            "1404300 600\n",
+            "335700 500\n",
+            "482100 400\n",
+            "422475 300\n",
+            "######\n",
+            "1404300 700\n",
+            "335700 600\n",
+            "482100 500\n",
+            "422475 400\n",
+            "######\n",
+            "1404300 800\n",
+            "335700 700\n",
+            "482100 600\n",
+            "422475 500\n",
+            "963900 400\n",
+            "######\n",
+            "1404300 900\n",
+            "335700 800\n",
+            "482100 700\n",
+            "422475 600\n",
+            "963900 500\n",
+            "######\n",
+            "1404300 1000\n",
+            "335700 900\n",
+            "482100 800\n",
+            "422475 700\n",
+            "963900 600\n",
+            "999975 500\n",
+            "######\n",
+            "1404300 1100\n",
+            "335700 1000\n",
+            "482100 900\n",
+            "422475 800\n",
+            "963900 700\n",
+            "999975 600\n",
+            "######\n",
+            "1404300 1200\n",
+            "335700 1100\n",
+            "482100 1000\n",
+            "422475 900\n",
+            "963900 800\n",
+            "999975 700\n",
+            "785550 600\n",
+            "######\n",
+            "1404300 1300\n",
+            "335700 1200\n",
+            "482100 1100\n",
+            "422475 1000\n",
+            "963900 900\n",
+            "999975 800\n",
+            "785550 700\n",
+            "######\n",
+            "1404300 1400\n",
+            "335700 1300\n",
+            "482100 1200\n",
+            "422475 1100\n",
+            "963900 1000\n",
+            "999975 900\n",
+            "785550 800\n",
+            "1823400 700\n",
+            "######\n",
+            "1404300 1500\n",
+            "335700 1400\n",
+            "482100 1300\n",
+            "422475 1200\n",
+            "963900 1100\n",
+            "999975 1000\n",
+            "785550 900\n",
+            "1823400 800\n",
+            "######\n",
+            "1404300 1600\n",
+            "335700 1500\n",
+            "482100 1400\n",
+            "422475 1300\n",
+            "963900 1200\n",
+            "999975 1100\n",
+            "785550 1000\n",
+            "1823400 900\n",
+            "3448575 800\n",
+            "######\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
