--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "hCe-dPbQCXAz",
         "colab_type": "code",
-        "outputId": "d4fe58f0-a4fe-4fc5-e31a-c9f2ed24ab29",
+        "outputId": "9cf63dcb-28e6-4de8-bb35-5b8c97a35179",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -279,218 +279,184 @@
         "\n",
         "dft['helpcall'] = dft['strike'] - dft.loc[0,'strike']\n",
         "dft['helpput'] = dft['strike'].iloc[-1] - dft['strike']\n",
-        "\n",
         "j = 0\n",
         "a = 0\n",
-        "'''for i in range(0,len(dft)):\n",
+        "for i in range(0,len(dft)):\n",
         "  a = 0\n",
         "  b = 0\n",
         "  for j in range(0,i):\n",
-        "    print(i,j,dft['putoi'].iloc[j],dft['helpput'].iloc[i-j],b)\n",
+        "    #print(i,j,dft['putoi'].iloc[j],dft['helpput'].iloc[i-j],b)\n",
         "    a = a + dft['calloi'].iloc[j] * dft['helpcall'].iloc[i-j]\n",
-        "    b = b + dft['putoi'].iloc[j] * dft['helpput'].iloc[i-j]\n",
-        "    #print(j)'''\n",
+        "    #print(j)\n",
         "for i in range(len(dft)-1,0,-1):\n",
         "  b = 0\n",
-        "  for j in range(0,i+1):\n",
+        "  for j in range(i,0,-1):\n",
         "    #print(i,j)\n",
-        "    print(i,j,dft['putoi'].iloc[j-i],dft['helpcall'].iloc[-j],b)\n",
-        "    b = b + dft['putoi'].iloc[j-i] * dft['helpcall'].iloc[-j]\n",
+        "    print(i,j,dft['putoi'].iloc[i-j],dft['helpput'].iloc[j],b)\n",
+        "    b = b + dft['putoi'].iloc[i-j] * dft['helpput'].iloc[j]\n",
         "    #print(j)\n",
         "\n",
         "  print('######')\n",
-        "  print(b)\n",
-        "#dft.head()"
+        "  #print(b)\n",
+        "#dft.tail()"
       ],
-      "execution_count": 37,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "16 0 1029150 0 0\n",
-            "16 1 2977875 1600 0\n",
-            "16 2 1975650 1500 4764600000\n",
-            "16 3 2336700 1400 7728075000\n",
-            "16 4 4548450 1300 10999455000\n",
-            "16 5 3690900 1200 16912440000\n",
-            "16 6 5783025 1100 21341520000\n",
-            "16 7 4864125 1000 27702847500\n",
-            "16 8 2559375 900 32566972500\n",
-            "16 9 1447125 800 34870410000\n",
-            "16 10 310500 700 36028110000\n",
-            "16 11 248775 600 36245460000\n",
-            "16 12 355725 500 36394725000\n",
-            "16 13 255525 400 36572587500\n",
-            "16 14 488475 300 36674797500\n",
-            "16 15 58500 200 36821340000\n",
-            "16 16 4087050 100 36833040000\n",
+            "16 16 4087050 0 0\n",
+            "16 15 1029150 100 0\n",
+            "16 14 2977875 200 102915000\n",
+            "16 13 1975650 300 698490000\n",
+            "16 12 2336700 400 1291185000\n",
+            "16 11 4548450 500 2225865000\n",
+            "16 10 3690900 600 4500090000\n",
+            "16 9 5783025 700 6714630000\n",
+            "16 8 4864125 800 10762747500\n",
+            "16 7 2559375 900 14654047500\n",
+            "16 6 1447125 1000 16957485000\n",
+            "16 5 310500 1100 18404610000\n",
+            "16 4 248775 1200 18746160000\n",
+            "16 3 355725 1300 19044690000\n",
+            "16 2 255525 1400 19507132500\n",
+            "16 1 488475 1500 19864867500\n",
             "######\n",
-            "37241745000\n",
-            "15 0 2977875 0 0\n",
-            "15 1 1975650 1600 0\n",
-            "15 2 2336700 1500 3161040000\n",
-            "15 3 4548450 1400 6666090000\n",
-            "15 4 3690900 1300 13033920000\n",
-            "15 5 5783025 1200 17832090000\n",
-            "15 6 4864125 1100 24771720000\n",
-            "15 7 2559375 1000 30122257500\n",
-            "15 8 1447125 900 32681632500\n",
-            "15 9 310500 800 33984045000\n",
-            "15 10 248775 700 34232445000\n",
-            "15 11 355725 600 34406587500\n",
-            "15 12 255525 500 34620022500\n",
-            "15 13 488475 400 34747785000\n",
-            "15 14 58500 300 34943175000\n",
-            "15 15 4087050 200 34960725000\n",
+            "15 15 4087050 100 0\n",
+            "15 14 1029150 200 408705000\n",
+            "15 13 2977875 300 614535000\n",
+            "15 12 1975650 400 1507897500\n",
+            "15 11 2336700 500 2298157500\n",
+            "15 10 4548450 600 3466507500\n",
+            "15 9 3690900 700 6195577500\n",
+            "15 8 5783025 800 8779207500\n",
+            "15 7 4864125 900 13405627500\n",
+            "15 6 2559375 1000 17783340000\n",
+            "15 5 1447125 1100 20342715000\n",
+            "15 4 310500 1200 21934552500\n",
+            "15 3 248775 1300 22307152500\n",
+            "15 2 355725 1400 22630560000\n",
+            "15 1 255525 1500 23128575000\n",
             "######\n",
-            "35778135000\n",
-            "14 0 1975650 0 0\n",
-            "14 1 2336700 1600 0\n",
-            "14 2 4548450 1500 3738720000\n",
-            "14 3 3690900 1400 10561395000\n",
-            "14 4 5783025 1300 15728655000\n",
-            "14 5 4864125 1200 23246587500\n",
-            "14 6 2559375 1100 29083537500\n",
-            "14 7 1447125 1000 31898850000\n",
-            "14 8 310500 900 33345975000\n",
-            "14 9 248775 800 33625425000\n",
-            "14 10 355725 700 33824445000\n",
-            "14 11 255525 600 34073452500\n",
-            "14 12 488475 500 34226767500\n",
-            "14 13 58500 400 34471005000\n",
-            "14 14 4087050 300 34494405000\n",
+            "14 14 4087050 200 0\n",
+            "14 13 1029150 300 817410000\n",
+            "14 12 2977875 400 1126155000\n",
+            "14 11 1975650 500 2317305000\n",
+            "14 10 2336700 600 3305130000\n",
+            "14 9 4548450 700 4707150000\n",
+            "14 8 3690900 800 7891065000\n",
+            "14 7 5783025 900 10843785000\n",
+            "14 6 4864125 1000 16048507500\n",
+            "14 5 2559375 1100 20912632500\n",
+            "14 4 1447125 1200 23727945000\n",
+            "14 3 310500 1300 25464495000\n",
+            "14 2 248775 1400 25868145000\n",
+            "14 1 355725 1500 26216430000\n",
             "######\n",
-            "35720520000\n",
-            "13 0 2336700 0 0\n",
-            "13 1 4548450 1600 0\n",
-            "13 2 3690900 1500 7277520000\n",
-            "13 3 5783025 1400 12813870000\n",
-            "13 4 4864125 1300 20910105000\n",
-            "13 5 2559375 1200 27233467500\n",
-            "13 6 1447125 1100 30304717500\n",
-            "13 7 310500 1000 31896555000\n",
-            "13 8 248775 900 32207055000\n",
-            "13 9 355725 800 32430952500\n",
-            "13 10 255525 700 32715532500\n",
-            "13 11 488475 600 32894400000\n",
-            "13 12 58500 500 33187485000\n",
-            "13 13 4087050 400 33216735000\n",
+            "13 13 4087050 300 0\n",
+            "13 12 1029150 400 1226115000\n",
+            "13 11 2977875 500 1637775000\n",
+            "13 10 1975650 600 3126712500\n",
+            "13 9 2336700 700 4312102500\n",
+            "13 8 4548450 800 5947792500\n",
+            "13 7 3690900 900 9586552500\n",
+            "13 6 5783025 1000 12908362500\n",
+            "13 5 4864125 1100 18691387500\n",
+            "13 4 2559375 1200 24041925000\n",
+            "13 3 1447125 1300 27113175000\n",
+            "13 2 310500 1400 28994437500\n",
+            "13 1 248775 1500 29429137500\n",
             "######\n",
-            "34851555000\n",
-            "12 0 4548450 0 0\n",
-            "12 1 3690900 1600 0\n",
-            "12 2 5783025 1500 5905440000\n",
-            "12 3 4864125 1400 14579977500\n",
-            "12 4 2559375 1300 21389752500\n",
-            "12 5 1447125 1200 24716940000\n",
-            "12 6 310500 1100 26453490000\n",
-            "12 7 248775 1000 26795040000\n",
-            "12 8 355725 900 27043815000\n",
-            "12 9 255525 800 27363967500\n",
-            "12 10 488475 700 27568387500\n",
-            "12 11 58500 600 27910320000\n",
-            "12 12 4087050 500 27945420000\n",
+            "12 12 4087050 400 0\n",
+            "12 11 1029150 500 1634820000\n",
+            "12 10 2977875 600 2149395000\n",
+            "12 9 1975650 700 3936120000\n",
+            "12 8 2336700 800 5319075000\n",
+            "12 7 4548450 900 7188435000\n",
+            "12 6 3690900 1000 11282040000\n",
+            "12 5 5783025 1100 14972940000\n",
+            "12 4 4864125 1200 21334267500\n",
+            "12 3 2559375 1300 27171217500\n",
+            "12 2 1447125 1400 30498405000\n",
+            "12 1 310500 1500 32524380000\n",
             "######\n",
-            "29988945000\n",
-            "11 0 3690900 0 0\n",
-            "11 1 5783025 1600 0\n",
-            "11 2 4864125 1500 9252840000\n",
-            "11 3 2559375 1400 16549027500\n",
-            "11 4 1447125 1300 20132152500\n",
-            "11 5 310500 1200 22013415000\n",
-            "11 6 248775 1100 22386015000\n",
-            "11 7 355725 1000 22659667500\n",
-            "11 8 255525 900 23015392500\n",
-            "11 9 488475 800 23245365000\n",
-            "11 10 58500 700 23636145000\n",
-            "11 11 4087050 600 23677095000\n",
+            "11 11 4087050 500 0\n",
+            "11 10 1029150 600 2043525000\n",
+            "11 9 2977875 700 2661015000\n",
+            "11 8 1975650 800 4745527500\n",
+            "11 7 2336700 900 6326047500\n",
+            "11 6 4548450 1000 8429077500\n",
+            "11 5 3690900 1100 12977527500\n",
+            "11 4 5783025 1200 17037517500\n",
+            "11 3 4864125 1300 23977147500\n",
+            "11 2 2559375 1400 30300510000\n",
+            "11 1 1447125 1500 33883635000\n",
             "######\n",
-            "26129325000\n",
-            "10 0 5783025 0 0\n",
-            "10 1 4864125 1600 0\n",
-            "10 2 2559375 1500 7782600000\n",
-            "10 3 1447125 1400 11621662500\n",
-            "10 4 310500 1300 13647637500\n",
-            "10 5 248775 1200 14051287500\n",
-            "10 6 355725 1100 14349817500\n",
-            "10 7 255525 1000 14741115000\n",
-            "10 8 488475 900 14996640000\n",
-            "10 9 58500 800 15436267500\n",
-            "10 10 4087050 700 15483067500\n",
+            "10 10 4087050 600 0\n",
+            "10 9 1029150 700 2452230000\n",
+            "10 8 2977875 800 3172635000\n",
+            "10 7 1975650 900 5554935000\n",
+            "10 6 2336700 1000 7333020000\n",
+            "10 5 4548450 1100 9669720000\n",
+            "10 4 3690900 1200 14673015000\n",
+            "10 3 5783025 1300 19102095000\n",
+            "10 2 4864125 1400 26620027500\n",
+            "10 1 2559375 1500 33429802500\n",
             "######\n",
-            "18344002500\n",
-            "9 0 4864125 0 0\n",
-            "9 1 2559375 1600 0\n",
-            "9 2 1447125 1500 4095000000\n",
-            "9 3 310500 1400 6265687500\n",
-            "9 4 248775 1300 6700387500\n",
-            "9 5 355725 1200 7023795000\n",
-            "9 6 255525 1100 7450665000\n",
-            "9 7 488475 1000 7731742500\n",
-            "9 8 58500 900 8220217500\n",
-            "9 9 4087050 800 8272867500\n",
+            "9 9 4087050 700 0\n",
+            "9 8 1029150 800 2860935000\n",
+            "9 7 2977875 900 3684255000\n",
+            "9 6 1975650 1000 6364342500\n",
+            "9 5 2336700 1100 8339992500\n",
+            "9 4 4548450 1200 10910362500\n",
+            "9 3 3690900 1300 16368502500\n",
+            "9 2 5783025 1400 21166672500\n",
+            "9 1 4864125 1500 29262907500\n",
             "######\n",
-            "11542507500\n",
-            "8 0 2559375 0 0\n",
-            "8 1 1447125 1600 0\n",
-            "8 2 310500 1500 2315400000\n",
-            "8 3 248775 1400 2781150000\n",
-            "8 4 355725 1300 3129435000\n",
-            "8 5 255525 1200 3591877500\n",
-            "8 6 488475 1100 3898507500\n",
-            "8 7 58500 1000 4435830000\n",
-            "8 8 4087050 900 4494330000\n",
+            "8 8 4087050 800 0\n",
+            "8 7 1029150 900 3269640000\n",
+            "8 6 2977875 1000 4195875000\n",
+            "8 5 1975650 1100 7173750000\n",
+            "8 4 2336700 1200 9346965000\n",
+            "8 3 4548450 1300 12151005000\n",
+            "8 2 3690900 1400 18063990000\n",
+            "8 1 5783025 1500 23231250000\n",
             "######\n",
-            "8172675000\n",
-            "7 0 1447125 0 0\n",
-            "7 1 310500 1600 0\n",
-            "7 2 248775 1500 496800000\n",
-            "7 3 355725 1400 869962500\n",
-            "7 4 255525 1300 1367977500\n",
-            "7 5 488475 1200 1700160000\n",
-            "7 6 58500 1100 2286330000\n",
-            "7 7 4087050 1000 2350680000\n",
+            "7 7 4087050 900 0\n",
+            "7 6 1029150 1000 3678345000\n",
+            "7 5 2977875 1100 4707495000\n",
+            "7 4 1975650 1200 7983157500\n",
+            "7 3 2336700 1300 10353937500\n",
+            "7 2 4548450 1400 13391647500\n",
+            "7 1 3690900 1500 19759477500\n",
             "######\n",
-            "6437730000\n",
-            "6 0 310500 0 0\n",
-            "6 1 248775 1600 0\n",
-            "6 2 355725 1500 398040000\n",
-            "6 3 255525 1400 931627500\n",
-            "6 4 488475 1300 1289362500\n",
-            "6 5 58500 1200 1924380000\n",
-            "6 6 4087050 1100 1994580000\n",
+            "6 6 4087050 1000 0\n",
+            "6 5 1029150 1100 4087050000\n",
+            "6 4 2977875 1200 5219115000\n",
+            "6 3 1975650 1300 8792565000\n",
+            "6 2 2336700 1400 11360910000\n",
+            "6 1 4548450 1500 14632290000\n",
             "######\n",
-            "6490335000\n",
-            "5 0 248775 0 0\n",
-            "5 1 355725 1600 0\n",
-            "5 2 255525 1500 569160000\n",
-            "5 3 488475 1400 952447500\n",
-            "5 4 58500 1300 1636312500\n",
-            "5 5 4087050 1200 1712362500\n",
+            "5 5 4087050 1100 0\n",
+            "5 4 1029150 1200 4495755000\n",
+            "5 3 2977875 1300 5730735000\n",
+            "5 2 1975650 1400 9601972500\n",
+            "5 1 2336700 1500 12367882500\n",
             "######\n",
-            "6616822500\n",
-            "4 0 355725 0 0\n",
-            "4 1 255525 1600 0\n",
-            "4 2 488475 1500 408840000\n",
-            "4 3 58500 1400 1141552500\n",
-            "4 4 4087050 1300 1223452500\n",
+            "4 4 4087050 1200 0\n",
+            "4 3 1029150 1300 4904460000\n",
+            "4 2 2977875 1400 6242355000\n",
+            "4 1 1975650 1500 10411380000\n",
             "######\n",
-            "6536617500\n",
-            "3 0 255525 0 0\n",
-            "3 1 488475 1600 0\n",
-            "3 2 58500 1500 781560000\n",
-            "3 3 4087050 1400 869310000\n",
+            "3 3 4087050 1300 0\n",
+            "3 2 1029150 1400 5313165000\n",
+            "3 1 2977875 1500 6753975000\n",
             "######\n",
-            "6591180000\n",
-            "2 0 488475 0 0\n",
-            "2 1 58500 1600 0\n",
-            "2 2 4087050 1500 93600000\n",
+            "2 2 4087050 1400 0\n",
+            "2 1 1029150 1500 5721870000\n",
             "######\n",
-            "6224175000\n",
-            "1 0 58500 0 0\n",
-            "1 1 4087050 1600 0\n",
-            "######\n",
-            "6539280000\n"
+            "1 1 4087050 1500 0\n",
+            "######\n"
           ],
           "name": "stdout"
         }
