--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -264,10 +264,10 @@
       "metadata": {
         "id": "hCe-dPbQCXAz",
         "colab_type": "code",
-        "outputId": "9cf63dcb-28e6-4de8-bb35-5b8c97a35179",
+        "outputId": "6740a13f-3b0a-484b-99d1-7a968f35ddbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 344
         }
       },
       "source": [
@@ -279,6 +279,10 @@
         "\n",
         "dft['helpcall'] = dft['strike'] - dft.loc[0,'strike']\n",
         "dft['helpput'] = dft['strike'].iloc[-1] - dft['strike']\n",
+        "\n",
+        "dft['ccall'] = 0\n",
+        "dft['cput'] = 0\n",
+        "\n",
         "j = 0\n",
         "a = 0\n",
         "for i in range(0,len(dft)):\n",
@@ -287,180 +291,60 @@
         "  for j in range(0,i):\n",
         "    #print(i,j,dft['putoi'].iloc[j],dft['helpput'].iloc[i-j],b)\n",
         "    a = a + dft['calloi'].iloc[j] * dft['helpcall'].iloc[i-j]\n",
-        "    #print(j)\n",
+        "  dft['ccall'].iloc[i] = a\n",
+        "  \n",
         "for i in range(len(dft)-1,0,-1):\n",
         "  b = 0\n",
-        "  for j in range(i,0,-1):\n",
-        "    #print(i,j)\n",
-        "    print(i,j,dft['putoi'].iloc[i-j],dft['helpput'].iloc[j],b)\n",
-        "    b = b + dft['putoi'].iloc[i-j] * dft['helpput'].iloc[j]\n",
-        "    #print(j)\n",
         "\n",
-        "  print('######')\n",
-        "  #print(b)\n",
-        "#dft.tail()"
+        "  for j in range(0,i):\n",
+        "    if i = len(dft)-1:\n",
+        "      b = b + dft['putoi'].iloc[j-i] * dft['helpcall'].iloc[j]\n",
+        "    #print(i,j,dft['putoi'].iloc[j-i],dft['helpcall'].iloc[j],b)\n",
+        "    b = b + dft['putoi'].iloc[j-i] * dft['helpcall'].iloc[j]\n",
+        "  dft['cput'].iloc[-i] = b\n",
+        "\n",
+        "print(dft)"
       ],
-      "execution_count": 14,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "16 16 4087050 0 0\n",
-            "16 15 1029150 100 0\n",
-            "16 14 2977875 200 102915000\n",
-            "16 13 1975650 300 698490000\n",
-            "16 12 2336700 400 1291185000\n",
-            "16 11 4548450 500 2225865000\n",
-            "16 10 3690900 600 4500090000\n",
-            "16 9 5783025 700 6714630000\n",
-            "16 8 4864125 800 10762747500\n",
-            "16 7 2559375 900 14654047500\n",
-            "16 6 1447125 1000 16957485000\n",
-            "16 5 310500 1100 18404610000\n",
-            "16 4 248775 1200 18746160000\n",
-            "16 3 355725 1300 19044690000\n",
-            "16 2 255525 1400 19507132500\n",
-            "16 1 488475 1500 19864867500\n",
-            "######\n",
-            "15 15 4087050 100 0\n",
-            "15 14 1029150 200 408705000\n",
-            "15 13 2977875 300 614535000\n",
-            "15 12 1975650 400 1507897500\n",
-            "15 11 2336700 500 2298157500\n",
-            "15 10 4548450 600 3466507500\n",
-            "15 9 3690900 700 6195577500\n",
-            "15 8 5783025 800 8779207500\n",
-            "15 7 4864125 900 13405627500\n",
-            "15 6 2559375 1000 17783340000\n",
-            "15 5 1447125 1100 20342715000\n",
-            "15 4 310500 1200 21934552500\n",
-            "15 3 248775 1300 22307152500\n",
-            "15 2 355725 1400 22630560000\n",
-            "15 1 255525 1500 23128575000\n",
-            "######\n",
-            "14 14 4087050 200 0\n",
-            "14 13 1029150 300 817410000\n",
-            "14 12 2977875 400 1126155000\n",
-            "14 11 1975650 500 2317305000\n",
-            "14 10 2336700 600 3305130000\n",
-            "14 9 4548450 700 4707150000\n",
-            "14 8 3690900 800 7891065000\n",
-            "14 7 5783025 900 10843785000\n",
-            "14 6 4864125 1000 16048507500\n",
-            "14 5 2559375 1100 20912632500\n",
-            "14 4 1447125 1200 23727945000\n",
-            "14 3 310500 1300 25464495000\n",
-            "14 2 248775 1400 25868145000\n",
-            "14 1 355725 1500 26216430000\n",
-            "######\n",
-            "13 13 4087050 300 0\n",
-            "13 12 1029150 400 1226115000\n",
-            "13 11 2977875 500 1637775000\n",
-            "13 10 1975650 600 3126712500\n",
-            "13 9 2336700 700 4312102500\n",
-            "13 8 4548450 800 5947792500\n",
-            "13 7 3690900 900 9586552500\n",
-            "13 6 5783025 1000 12908362500\n",
-            "13 5 4864125 1100 18691387500\n",
-            "13 4 2559375 1200 24041925000\n",
-            "13 3 1447125 1300 27113175000\n",
-            "13 2 310500 1400 28994437500\n",
-            "13 1 248775 1500 29429137500\n",
-            "######\n",
-            "12 12 4087050 400 0\n",
-            "12 11 1029150 500 1634820000\n",
-            "12 10 2977875 600 2149395000\n",
-            "12 9 1975650 700 3936120000\n",
-            "12 8 2336700 800 5319075000\n",
-            "12 7 4548450 900 7188435000\n",
-            "12 6 3690900 1000 11282040000\n",
-            "12 5 5783025 1100 14972940000\n",
-            "12 4 4864125 1200 21334267500\n",
-            "12 3 2559375 1300 27171217500\n",
-            "12 2 1447125 1400 30498405000\n",
-            "12 1 310500 1500 32524380000\n",
-            "######\n",
-            "11 11 4087050 500 0\n",
-            "11 10 1029150 600 2043525000\n",
-            "11 9 2977875 700 2661015000\n",
-            "11 8 1975650 800 4745527500\n",
-            "11 7 2336700 900 6326047500\n",
-            "11 6 4548450 1000 8429077500\n",
-            "11 5 3690900 1100 12977527500\n",
-            "11 4 5783025 1200 17037517500\n",
-            "11 3 4864125 1300 23977147500\n",
-            "11 2 2559375 1400 30300510000\n",
-            "11 1 1447125 1500 33883635000\n",
-            "######\n",
-            "10 10 4087050 600 0\n",
-            "10 9 1029150 700 2452230000\n",
-            "10 8 2977875 800 3172635000\n",
-            "10 7 1975650 900 5554935000\n",
-            "10 6 2336700 1000 7333020000\n",
-            "10 5 4548450 1100 9669720000\n",
-            "10 4 3690900 1200 14673015000\n",
-            "10 3 5783025 1300 19102095000\n",
-            "10 2 4864125 1400 26620027500\n",
-            "10 1 2559375 1500 33429802500\n",
-            "######\n",
-            "9 9 4087050 700 0\n",
-            "9 8 1029150 800 2860935000\n",
-            "9 7 2977875 900 3684255000\n",
-            "9 6 1975650 1000 6364342500\n",
-            "9 5 2336700 1100 8339992500\n",
-            "9 4 4548450 1200 10910362500\n",
-            "9 3 3690900 1300 16368502500\n",
-            "9 2 5783025 1400 21166672500\n",
-            "9 1 4864125 1500 29262907500\n",
-            "######\n",
-            "8 8 4087050 800 0\n",
-            "8 7 1029150 900 3269640000\n",
-            "8 6 2977875 1000 4195875000\n",
-            "8 5 1975650 1100 7173750000\n",
-            "8 4 2336700 1200 9346965000\n",
-            "8 3 4548450 1300 12151005000\n",
-            "8 2 3690900 1400 18063990000\n",
-            "8 1 5783025 1500 23231250000\n",
-            "######\n",
-            "7 7 4087050 900 0\n",
-            "7 6 1029150 1000 3678345000\n",
-            "7 5 2977875 1100 4707495000\n",
-            "7 4 1975650 1200 7983157500\n",
-            "7 3 2336700 1300 10353937500\n",
-            "7 2 4548450 1400 13391647500\n",
-            "7 1 3690900 1500 19759477500\n",
-            "######\n",
-            "6 6 4087050 1000 0\n",
-            "6 5 1029150 1100 4087050000\n",
-            "6 4 2977875 1200 5219115000\n",
-            "6 3 1975650 1300 8792565000\n",
-            "6 2 2336700 1400 11360910000\n",
-            "6 1 4548450 1500 14632290000\n",
-            "######\n",
-            "5 5 4087050 1100 0\n",
-            "5 4 1029150 1200 4495755000\n",
-            "5 3 2977875 1300 5730735000\n",
-            "5 2 1975650 1400 9601972500\n",
-            "5 1 2336700 1500 12367882500\n",
-            "######\n",
-            "4 4 4087050 1200 0\n",
-            "4 3 1029150 1300 4904460000\n",
-            "4 2 2977875 1400 6242355000\n",
-            "4 1 1975650 1500 10411380000\n",
-            "######\n",
-            "3 3 4087050 1300 0\n",
-            "3 2 1029150 1400 5313165000\n",
-            "3 1 2977875 1500 6753975000\n",
-            "######\n",
-            "2 2 4087050 1400 0\n",
-            "2 1 1029150 1500 5721870000\n",
-            "######\n",
-            "1 1 4087050 1500 0\n",
-            "######\n"
+            "    strike   calloi    putoi  helpcall  helpput        ccall         cput\n",
+            "0     7000  1404300  4087050         0     1600            0            0\n",
+            "1     7100   335700  1029150       100     1500    140430000  17398192500\n",
+            "2     7200   482100  2977875       200     1400    314430000  14208120000\n",
+            "3     7300   422475  1975650       300     1300    536640000  11315835000\n",
+            "4     7400   963900  2336700       400     1200    801097500   8621115000\n",
+            "5     7500   999975  4548450       500     1100   1161945000   6160065000\n",
+            "6     7600   785550  3690900       600     1000   1622790000   4153860000\n",
+            "7     7700  1823400  5783025       700      900   2162190000   2516745000\n",
+            "8     7800  3448575  4864125       800      800   2883930000   1457932500\n",
+            "9     7900  5367450  2559375       900      700   3950527500    885532500\n",
+            "10    8000  6510975  1447125      1000      600   5553870000    569070000\n",
+            "11    8100  5900325   310500      1100      500   7808310000    397320000\n",
+            "12    8200  5113350   248775      1200      400  10652782500    256620000\n",
+            "13    8300  3844500   355725      1300      300  14008590000    140797500\n",
+            "14    8400  2135625   255525      1400      200  17748847500     60547500\n",
+            "15    8500  2252250   488475      1500      100  21702667500      5850000\n",
+            "16    8600  1083750    58500      1600        0  25881712500            0\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "41yUjibEBEHN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
