--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "hCe-dPbQCXAz",
         "colab_type": "code",
-        "outputId": "6740a13f-3b0a-484b-99d1-7a968f35ddbb",
+        "outputId": "d7a1c853-41ec-4ce5-faa8-e8fcf78d78a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 344
@@ -278,7 +278,6 @@
         "dft=pd.DataFrame(frame)\n",
         "\n",
         "dft['helpcall'] = dft['strike'] - dft.loc[0,'strike']\n",
-        "dft['helpput'] = dft['strike'].iloc[-1] - dft['strike']\n",
         "\n",
         "dft['ccall'] = 0\n",
         "dft['cput'] = 0\n",
@@ -289,29 +288,28 @@
         "  a = 0\n",
         "  b = 0\n",
         "  for j in range(0,i):\n",
-        "    #print(i,j,dft['putoi'].iloc[j],dft['helpput'].iloc[i-j],b)\n",
         "    a = a + dft['calloi'].iloc[j] * dft['helpcall'].iloc[i-j]\n",
         "  dft['ccall'].iloc[i] = a\n",
         "  \n",
-        "for i in range(len(dft)-1,0,-1):\n",
+        "for i in range(len(dft),0,-1):\n",
         "  b = 0\n",
         "\n",
         "  for j in range(0,i):\n",
-        "    if i = len(dft)-1:\n",
+        "    if i == len(dft):\n",
+        "      b = b + dft['putoi'].iloc[i-j-1] * dft['helpcall'].iloc[-(j+1)]\n",
+        "    else:\n",
         "      b = b + dft['putoi'].iloc[j-i] * dft['helpcall'].iloc[j]\n",
-        "    #print(i,j,dft['putoi'].iloc[j-i],dft['helpcall'].iloc[j],b)\n",
-        "    b = b + dft['putoi'].iloc[j-i] * dft['helpcall'].iloc[j]\n",
-        "  dft['cput'].iloc[-i] = b\n",
+        "    dft['cput'].iloc[-i] = b\n",
         "\n",
         "print(dft)"
       ],
-      "execution_count": 9,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "    strike   calloi    putoi  helpcall  helpput        ccall         cput\n",
-            "0     7000  1404300  4087050         0     1600            0            0\n",
+            "0     7000  1404300  4087050         0     1600            0  20691180000\n",
             "1     7100   335700  1029150       100     1500    140430000  17398192500\n",
             "2     7200   482100  2977875       200     1400    314430000  14208120000\n",
             "3     7300   422475  1975650       300     1300    536640000  11315835000\n",
